tests/ui/extern/extern-main-fn.stderr
error[E0580]: `main` function has wrong type
  --> $DIR/extern-main-fn.rs:1:1
   |
LL | extern "C" fn main() {}
   | ^^^^^^^^^^^^^^^^^^^^ expected "CrabLang" fn, found "C" fn
   |
   = note: expected fn pointer `fn()`
              found fn pointer `extern "C" fn()`

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0580`.
